
name:                hclj
version:             1.0.0
synopsis:            clojure language library and REPL
license:             BSD3
license-file:        LICENSE
category:            Language
build-type:          Simple
cabal-version:       >=1.22
 
library

  exposed-modules:    Seal.Lang.Clj.Compile
                      Seal.Lang.Clj.Eval
                      Seal.Lang.Clj.Native
                      Seal.Lang.Clj.Native.Internal
                      Seal.Lang.Clj.Native.Time
                      Seal.Lang.Clj.Native.Ops
                      Seal.Lang.Clj.Parse
                      Seal.Lang.Clj.Quote
                      Seal.Lang.Clj.Simple
                      Seal.Lang.Clj.Types.Exp
                      Seal.Lang.Clj.Types.Compiler
                      Seal.Lang.Clj.Types.Runtime
                      Seal.Lang.Clj.Types.Term
                      Seal.Lang.Clj.Types.Type
                      Seal.Lang.Clj.Types.Typecheck
                      Seal.Lang.Clj.Typechecker

                      Seal.Lang.Common.Compiler
                      Seal.Lang.Common.Type
                      Seal.Lang.Common.Orphans
                      Seal.Lang.Common.Parser
                      Seal.Lang.Common.Util

                      Seal.Prelude
                      Seal.Prelude.App
                      Seal.Prelude.TH
                      Seal.Prelude.Unsafe

  build-depends:       Decimal >= 0.4.2 && < 0.6
                     , algebraic-graphs >= 0.3 && < 0.4
                     , ansi-wl-pprint >= 0.6.7.3 && < 0.7
                     , attoparsec >= 0.13.0.2 && < 0.14
                     , base16-bytestring >=0.1.1.6 && < 0.2
                     , bound >= 2 && < 2.1
                     , bytestring >=0.10.8.1 && < 0.11
                     , compactable >= 0.1 && < 0.2
                     , containers >= 0.5.7 && < 0.6
                     , data-default >= 0.7.1.1 && < 0.8
                     , deepseq >= 1.4.2.0 && < 1.5
                     , exceptions >= 0.8.3 && < 0.11
                     , hashable >= 1.2.4.0 && < 1.3
                     , lens >= 4.14 && <= 4.18
                     , lens-aeson >= 1.0.0.5 && < 1.1
                     , megaparsec >= 6
                     , mtl >= 2.2.1 && < 2.3
                     , old-locale >= 1.0.0.7 && < 1.1
                     , optparse-applicative >= 0.12.1.0 && < 0.15
                     , parsers >= 0.12.4 && < 0.13
                     , registry
                     , rio
                     , safe >= 0.3.11 && < 0.4
                     , scientific >= 0.3.4.9 && < 0.4
                     , semigroups >= 0.18.2 && < 0.19
                     , stm >= 2.4.4.1 && < 2.6
                     , template-haskell
                     , text >= 1.2.2.1 && < 1.3
                     -- kadena ghcjs compat fork
                     , thyme == 0.3.6.0
                     , trifecta >= 2 && < 2.1
                     , unliftio
                     , unordered-containers >= 0.2.7.2 && < 0.3
                     , utf8-string >= 1.0.1.1 && < 1.1
                     , vector >= 0.11.0.0 && < 0.13
                     , vector-space >= 0.10.4 && < 0.16
                     , universum
                     , base

  if !impl(ghcjs)
    build-depends:
        cryptonite
      , memory
      , yaml

  if !impl(ghcjs) && !os(windows)
    build-depends: unix

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  ghc-prof-options:    -fprof-auto -fprof-auto-calls
  default-extensions:  
                       BangPatterns
                       DeriveGeneric
                       DeriveFoldable
                       DeriveFunctor
                       DeriveTraversable
                       FlexibleInstances
                      --  GADTs
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       NoImplicitPrelude
                       OverloadedStrings
                       RecordWildCards
                       TupleSections
                       TypeFamilies
                       TypeSynonymInstances
                       ViewPatterns
